# Amethyst

./: CMakeLists.txt  ChessGame.h  Eval.h  README.md  Typedefs.h  UCI.cpp  UCI.h  attacks.cpp  attacks.h  bench.cpp  bench.h  bitmasks.h  chessboard.cpp  chessboard.h  corrhist.cpp  corrhist.h  flags.h  hce.cpp  hce.h  hcetuner.cpp  logarithm.h  main.cpp  movegenerator.cpp  movegenerator.h  movelist.h  moveorder.cpp  moveorder.h  perft.cpp  perft.h  repetitiontable.cpp  repetitiontable.h  search.cpp  search.h  searchglobals.cpp  searchglobals.h  tests.cpp  tt.cpp  tt.h  typedefs.h  uci.cpp  (+4 more)
hce/: Eval.h  PawnHashTable.cpp  PawnHashTable.h
movegen/: Bitmasks.h  CheckBlock.cpp  CheckBlock.h  ChessBoard.cpp  ChessBoard.h  Flags.h  Logarithm.h  MagicBitboards.cpp  MagicBitboards.h  MoveList.h
search/: Bench.cpp  Bench.h  Conthist.cpp  Conthist.h  DeltaPruning.h  LMRTable.cpp  LMRTable.h  MoveList.cpp  MoveList.h  MoveOrder.cpp  MoveOrder.h  Negamax.cpp  Negamax.h  QuietHistory.cpp  QuietHistory.h  RepetitionTable.h  SEE.cpp  SEE.h  TranspositionTable.cpp  TranspositionTable.h  TwoKillerMoves.cpp  TwoKillerMoves.h  Zobrist.h
